--- a/.devcontainer/compose.yaml
+++ b/.devcontainer/compose.yaml
@@ -1,40 +1,54 @@
 name: landing-prom
 
 services:
-  # database:
-  #   image: postgres:latest
-  #   expose:
-  #     - "5432"
-  #   restart: always
-  #   environment:
-  #     POSTGRES_USER: david
-  #     POSTGRES_PASSWORD: 123
-  #     POSTGRES_DB: landing
-  #   volumes:
-  #     - landingDB:/var/lib/postgresql/data
+  database:
+    image: postgres:latest
+    expose:
+      - "5432"
+    restart: always
+    environment:
+      POSTGRES_USER: david
+      POSTGRES_PASSWORD: 123
+      POSTGRES_DB: landing
+    volumes:
+      - postgresDB:/var/lib/postgresql/data
 
-  # pgadmin:
-  #   image: dpage/pgadmin4:latest
-  #   ports:
-  #     - "8080:80"
-  #   depends_on:
-  #     - database
-  #   environment:
-  #     PGADMIN_DEFAULT_EMAIL: davidsgv98@gmail.com
-  #     PGADMIN_DEFAULT_PASSWORD: 123
-  #   volumes:
-  #     - pgAdmin:/var/lib/pgadmin
+  pgadmin:
+    image: dpage/pgadmin4:latest
+    ports:
+      - "8080:80"
+    depends_on:
+      - database
+    environment:
+      PGADMIN_DEFAULT_EMAIL: davidsgv98@gmail.com
+      PGADMIN_DEFAULT_PASSWORD: 123
+    volumes:
+      - pgAdmin:/var/lib/pgadmin
 
   back:
     build: .
-    # depends_on:
-    #   - database
+    depends_on:
+      - database
     tty: true
     volumes:
       - ..:/workspace:cached
-  #volumes:
-  # landingDB:
-  #   name: "landing_PostgreSQL_DB"
-  # pgAdmin:
-  #   name: pgAdminData
-  #   external: true
+    env_file:
+      - ../.env
+
+  swaggerUI:
+    image: swaggerapi/swagger-ui
+    ports:
+      - "8081:8080"
+    environment:
+      SWAGGER_JSON: /spec/openapi.yaml
+    volumes:
+      - ../docs/api/spec:/spec/
+    depends_on:
+      - back
+
+volumes:
+  postgresDB:
+    name: "postgresDB"
+  pgAdmin:
+    name: pgAdminData
+    external: true
